// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ebay-carousel rendering renders continuous story correctly 1`] = `
<button
  aria-disabled="true"
  class="carousel__control carousel__control--prev"
  disabled=""
>
  <svg
    aria-hidden="true"
    class="icon icon--carousel-prev icon icon--12"
    focusable="false"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="#icon-chevron-left-12"
    />
  </svg>
</button>
`;

exports[`ebay-carousel rendering renders continuous story correctly 2`] = `
<button
  aria-disabled="true"
  class="carousel__control carousel__control--next"
  disabled=""
>
  <svg
    aria-hidden="true"
    class="icon icon--carousel-next icon icon--12"
    focusable="false"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="#icon-chevron-right-12"
    />
  </svg>
</button>
`;
